# libollama

./: CMakeLists.txt  Makefile  README.md  common.mk
lib/: ollama_blob.c  ollama_chat.c  ollama_close.c  ollama_copy.c  ollama_create.c  ollama_delete.c  ollama_embed.c  ollama_generate.c  ollama_init.c  ollama_list.c  ollama_load.c  ollama_priv.h  ollama_ps.c  ollama_pull.c  ollama_push.c  ollama_show.c  ollama_unload.c  ollama_utils.c
lib/public/ollama/: ollama.h
test/: Makefile  common.mk  test_chat.c  test_copy_delete.c  test_generate.c  test_list.c  test_load_unload.c  test_ps.c  test_show.c
test/nto/x86_64/: Makefile
